[project]
name = "medicalai"
version = "0.1.0"
description = "RAI 后 Graves 固定 landmark 与 rolling landmark 建模"
requires-python = ">=3.11"
dependencies = [
  "streamlit==1.37.1",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "scikit-learn==1.5.1",
  "imbalanced-learn==0.12.3",
  "joblib==1.4.2",
  "openpyxl==3.1.5",
  "scipy==1.13.1",
  "matplotlib",
  "seaborn",
  "lifelines",
  "shap",
]

[tool.uv]
package = false
